--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ html {
 /*=======header======*/
 
 header {
+  width: 100%;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -569,13 +570,18 @@ section {
   font-size: 2rem;
 }
 @media (max-width: 1200px) {
+
   html {
     font-size: 55%;
+  }
+  .heading{
+    width: 100%;
   }
 }
 
 
 @media (max-width: 768px) {
+
   #menu-bar {
     display: initial;
   }
